@@ -19,7 +19,9 @@ evas_buffer_outbuf_buf_free(Outbuf *buf)
 Outbuf *
 evas_buffer_outbuf_buf_setup_fb(int w, int h, Outbuf_Depth depth, void *dest, int dest_row_bytes, int use_color_key, DATA32 color_key, int alpha_level,
 				void * (*new_update_region) (int x, int y, int w, int h, int *row_bytes),
-				void   (*free_update_region) (int x, int y, int w, int h, void *data)
+				void   (*free_update_region) (int x, int y, int w, int h, void *data),
+				void * (*switch_buffer) (void *data, void *dest_buffer),
+				void *switch_data
 				)
 {
    Outbuf *buf;
@@ -38,9 +40,12 @@ evas_buffer_outbuf_buf_setup_fb(int w, int h, Outbuf_Depth depth, void *dest, in
    buf->alpha_level = alpha_level;
    buf->color_key = color_key;
    buf->use_color_key = use_color_key;
+   buf->first_frame = 1;
 
    buf->func.new_update_region = new_update_region;
    buf->func.free_update_region = free_update_region;
+   buf->func.switch_buffer = switch_buffer;
+   buf->switch_data = switch_data;
 
    bpp = sizeof(DATA32);
    if ((buf->depth == OUTBUF_DEPTH_RGB_24BPP_888_888) ||
@@ -99,6 +104,24 @@ void
 evas_buffer_outbuf_buf_free_region_for_update(Outbuf *buf, RGBA_Image *update)
 {
    if (update != buf->priv.back_buf) evas_cache_image_drop(&update->cache_entry);
+}
+
+void
+evas_buffer_outbuf_buf_switch_buffer(Outbuf *buf)
+{
+   if (buf->func.switch_buffer)
+     {
+        buf->dest = buf->func.switch_buffer(buf->switch_data, buf->dest);
+        if (buf->priv.back_buf)
+          {
+             evas_cache_image_drop(&buf->priv.back_buf->cache_entry);
+             buf->priv.back_buf = (RGBA_Image *) evas_cache_image_data(evas_common_image_cache_get(),
+                                                                       buf->w, buf->h,
+                                                                       buf->dest,
+                                                                       buf->depth == OUTBUF_DEPTH_ARGB_32BPP_8888_8888 ? 1 : 0,
+                                                                       EVAS_COLORSPACE_ARGB8888);
+          }
+     }
 }
 
 void
